--- a/bookers2-debug/app/views/books/index.html.erb
+++ b/bookers2-debug/app/views/books/index.html.erb
@@ -19,14 +19,16 @@
 					<th></th>
 					<th>Title</th>
 					<th>Opinion</th>
-					<th colspan="3"></th>
+					<th>Likes</th>
+                    <th>Comments</th>
 				</tr>
 			</thead>
 
 			<tbody>
+                <tr class="new_book"></tr>
 				<% @books.each do |book| %>
-                    <tr class="book_<%= book.id %>">
-                        <%= render 'book', book: book %>
+                    <tr class="books_<%= book.id %>">
+                        <%= render 'books', book: book %>
                     </tr>
 				<% end %>
 			</tbody>
