--- a/bookers2-debug/app/views/favorites/destroy.js.erb
+++ b/bookers2-debug/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$(".book_<%= @a.id %>").html("<%= j(render 'books/book', book: @a ) %>");
+$(".books_<%= @book.id %>").html("<%= j(render 'books/books', book: @book ) %>");
