--- a/bookers2-debug/app/views/users/_profile.html.erb
+++ b/bookers2-debug/app/views/users/_profile.html.erb
@@ -10,6 +10,25 @@
 			<th>introduction</th>
 			<th><%= user.introduction %></th>
 		</tr>
+
+		<tr>
+			<th>follows</th>
+			<th><%= link_to "#{user.follower.count}", users_following_path(user) %></th>
+		</tr>
+
+		<tr>
+			<th>followers</th>
+			<th><%= link_to "#{user.followed.count}", users_follower_path(user) %></th>
+		</tr>
+
+        <tr>
+            <th class="followbutton_<%= user.id %>">
+                <% unless user == current_user %>
+                    <%= render "followbutton", user: user %>
+                <% end %>
+            </th>
+            <th></th>
+		</tr>
 </table>
 
 <div class="row">
