--- a/bookers2-debug/app/views/users/index.html.erb
+++ b/bookers2-debug/app/views/users/index.html.erb
@@ -16,6 +16,8 @@
 						<th>image</th>
 						<th>name</th>
 						<th colspan="3"></th>
+                        <th colspan="3"></th>
+                        <th colspan="3"></th>
 					</tr>
 				</thead>
 
@@ -24,7 +26,14 @@
 					<tr>
 						<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 						<td><%= user.name%></td>
-						<td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
+						<td><%= link_to "Show", user %></td>
+                        <td><%= link_to "フォロー数:#{user.follower.count}", users_following_path(user) %></td>
+                        <td><%= link_to "フォロワー数:#{user.followed.count}", users_follower_path(user) %></td>
+                        <td class="followbutton_<%= user.id %>">
+                            <% unless user == current_user %>
+                                <%= render "followbutton", user: user %>
+                            <% end %>
+                        </td>
 					</tr>
 					<% end %>
 				</tbody>
